# foxc

./: .gitignore  CMakeLists.txt  README.md  configure
docs/: fork.txt  license.txt
examples/: Makefile.in  hello.c  test2.c
include/: fxacceltable.h  fxapp.h  fxascii.h  fxbutton.h  fxc.h  fxcomposecontext.h  fxcomposite.h  fxcursor.h  fxdc.h  fxdefs.h  fxdrv.h  fxfont.h  fxframe.h  fxhorizontalframe.h  fxkeys.h  fxlabel.h  fxmainwindow.h  fxobject.h  fxpacker.h  fxpoint.h  fxrootwindow.h  fxscrollarea.h  fxscrollbar.h  fxshell.h  fxstring.h  fxtext.h  fxtextfield.h  fxthread.h  fxtopwindow.h  fxunicode.h  fxutils.h  fxverticalframe.h  fxvisual.h  fxwindow.h
src/: Makefile.in  fxacceltable.c  fxapp.c  fxascii.c  fxbutton.c  fxcomposite.c  fxcursor.c  fxdc.c  fxfont.c  fxframe.c  fxhash.c  fxhorizontalframe.c  fxkeyboard.c  fxkeysym.c  fxlabel.c  fxmainwindow.c  fxobject.c  fxpacker.c  fxpriv.c  fxrootwindow.c  fxscrollarea.c  fxscrollbar.c  fxshell.c  fxstring.c  fxtext.c  fxtextfield.c  fxthread.c  fxtopwindow.c  fxunicode.c  fxutils.c  fxverticalframe.c  fxvisual.c  fxwindow.c
